Change anestbook policy

--- a/public/anestbook/oldpolicy/index.html
+++ b/public/anestbook/oldpolicy/index.html
@@ -23,7 +23,11 @@
 Effective Date: October, 7th, 2025
 Anesthesia Handbook (&ldquo;we&rdquo;, &ldquo;us&rdquo;, or &ldquo;our&rdquo;) respects your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.
 
-No Data Collection
+  1. No Data Collection
+  
+    
+    Link to heading
+  
 
 We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.">
 <meta name="keywords" content="blog,developer,personal">
@@ -34,14 +38,14 @@ We do not collect, store, or share any personal data from users. The app is desi
   <meta name="twitter:title" content="App Policy">
   <meta name="twitter:description" content="Privacy Policy for Anesthesia Handbook Link to heading Effective Date: October, 7th, 2025
 Anesthesia Handbook (“we”, “us”, or “our”) respects your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.
-No Data Collection We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.">
+1. No Data Collection Link to heading We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.">
 
-<meta property="og:url" content="http://localhost:1313/anestbook/2025-10-09-policy/">
+<meta property="og:url" content="http://localhost:1313/anestbook/oldpolicy/">
   <meta property="og:site_name" content="Gabriel J Reinert">
   <meta property="og:title" content="App Policy">
   <meta property="og:description" content="Privacy Policy for Anesthesia Handbook Link to heading Effective Date: October, 7th, 2025
 Anesthesia Handbook (“we”, “us”, or “our”) respects your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.
-No Data Collection We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.">
+1. No Data Collection Link to heading We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="anestbook">
@@ -51,7 +55,7 @@ No Data Collection We do not collect, store, or share any personal data from use
 
 
 
-<link rel="canonical" href="http://localhost:1313/anestbook/2025-10-09-policy/">
+<link rel="canonical" href="http://localhost:1313/anestbook/oldpolicy/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -153,7 +157,7 @@ No Data Collection We do not collect, store, or share any personal data from use
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/anestbook/2025-10-09-policy/">
+        <a class="title-link" href="http://localhost:1313/anestbook/oldpolicy/">
           App Policy
         </a>
       </h1>
@@ -168,37 +172,69 @@ No Data Collection We do not collect, store, or share any personal data from use
 </h1>
 <p><em>Effective Date: October, 7th, 2025</em></p>
 <p><em>Anesthesia Handbook</em> (&ldquo;we&rdquo;, &ldquo;us&rdquo;, or &ldquo;our&rdquo;) respects your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.</p>
-<ol>
-<li>No Data Collection</li>
-</ol>
+<h2 id="1-no-data-collection">
+  1. No Data Collection
+  <a class="heading-link" href="#1-no-data-collection">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>We do not collect, store, or share any personal data from users. The app is designed to function entirely offline, and all calculations and inputs are processed locally on your device.</p>
-<ol start="2">
-<li>No Internet Access</li>
-</ol>
+<h2 id="2-no-internet-access">
+  2. No Internet Access
+  <a class="heading-link" href="#2-no-internet-access">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>The app does not require or use internet access. It does not connect to any servers, third-party services, or analytics platforms.</p>
-<ol start="3">
-<li>No Advertisements</li>
-</ol>
+<h2 id="3-no-advertisements">
+  3. No Advertisements
+  <a class="heading-link" href="#3-no-advertisements">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>There are no ads in the app. You will not see any third-party advertising or promotional content.</p>
-<ol start="4">
-<li>No Third-Party Integrations</li>
-</ol>
+<h2 id="4-no-third-party-integrations">
+  4. No Third-Party Integrations
+  <a class="heading-link" href="#4-no-third-party-integrations">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>The app does not use any third-party libraries or SDKs that collect data or send information outside the device.</p>
-<ol start="5">
-<li>Local Data Storage (If Applicable)</li>
-</ol>
+<h2 id="5-local-data-storage-if-applicable">
+  5. Local Data Storage (If Applicable)
+  <a class="heading-link" href="#5-local-data-storage-if-applicable">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>Any data you input into the app (e.g., for calculations) is stored locally on your device (if at all) and remains under your control. You may delete this data at any time by clearing the app’s storage or uninstalling the app.</p>
-<ol start="6">
-<li>Children’s Privacy</li>
-</ol>
+<h2 id="6-childrens-privacy">
+  6. Children’s Privacy
+  <a class="heading-link" href="#6-childrens-privacy">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>As the app does not collect or transmit any personal data, it is compliant with privacy regulations regarding children&rsquo;s data, including COPPA and GDPR-K.</p>
-<ol start="7">
-<li>Changes to This Policy</li>
-</ol>
+<h2 id="7-changes-to-this-policy">
+  7. Changes to This Policy
+  <a class="heading-link" href="#7-changes-to-this-policy">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>We may update this Privacy Policy from time to time. Any changes will be reflected within the app or through app store updates. We encourage you to review this policy periodically.</p>
-<ol start="8">
-<li>Contact Us</li>
-</ol>
+<h2 id="8-contact-us">
+  8. Contact Us
+  <a class="heading-link" href="#8-contact-us">
+    <i class="fa-solid fa-link" aria-hidden="true" title="Link to heading"></i>
+    <span class="sr-only">Link to heading</span>
+  </a>
+</h2>
 <p>If you have any questions or concerns about this policy or the app, please contact us at:</p>
 <p>Developer Name: Gabriel J. Reinert
 Email: <a href="mailto:gabriel.j.reinert@protonmail.com" >gabriel.j.reinert@protonmail.com</a></p>
