--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
 
     <h1>Gabriel J. Reinert</h1>
 
-<h2>Doctor. Anesthesilogy resident. Developer</h2>
+<h2>Doctor. Anesthesiology resident. Developer</h2>
 
 
 
