--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -13,19 +13,21 @@
 
 
 <meta name="author" content="Gabriel J. Reinert">
-<meta name="description" content="Gabriel J. Reinert personal website">
+<meta name="description" content="App developer
+Doctor
+Anesthesiology resident">
 <meta name="keywords" content="blog,developer,personal">
 
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About">
-  <meta name="twitter:description" content="Gabriel J. Reinert personal website">
+  <meta name="twitter:description" content="App developer Doctor Anesthesiology resident">
 
 <meta property="og:url" content="http://localhost:1313/pages/about/">
   <meta property="og:site_name" content="Gabriel J Reinert">
   <meta property="og:title" content="About">
-  <meta property="og:description" content="Gabriel J. Reinert personal website">
+  <meta property="og:description" content="App developer Doctor Anesthesiology resident">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="pages">
@@ -143,7 +145,10 @@
       </h1>
     </header>
 
-    
+    <p>App developer
+Doctor
+Anesthesiology resident</p>
+
   </article>
 </section>
 
